test/units/ParseSpec/valid/expr/implicit-let-4.algst
let ? : Int = 42 in ()
