test/units/ParseSpec/invalid/decl/pair-type-con.algst
foo : (,) Int Int
foo = (1, 2)
